registry/components/gotify/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gotify
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
