registry/components/gotify/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
  annotations:
    tailscale.com/tailnet-fqdn: nasdrive.tail30e9d2.ts.net
    argocd.argoproj.io/sync-wave: "10"
spec:
  externalName: gotify
  type: ExternalName
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify
  namespace: gotify
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    argocd.argoproj.io/sync-wave: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: gotify.simonemms.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotify
                port:
                  number: 4747
  tls:
    - hosts:
        - gotify.simonemms.com
      secretName: gotify-tls
